--- a/moringa-school-projects/Akan-Birthdays/project.html
+++ b/moringa-school-projects/Akan-Birthdays/project.html
@@ -4,6 +4,30 @@
       <title>Akan-Birthdays</title>
     </head>
     <body>
-      
+      <link href="bootstrap-4.3.1-dist/css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
+
+      <div class="container">
+         <nav>
+          <ul class="project">
+            <li><a href="Index.html"> Akan</a></li>
+          </ul>
+         </nav>
+
+        <form>
+          firstname:
+          <input type="text" name="firstname" placeholder="write your First Name"><br>
+          secondname:
+          <input type="text" name="SecondName" placeholder="Write your second name"><br>
+          gender:<br>
+          <input type="radio" name="gender" value="male">Male<br>
+          <input type="radio" name="gender" value="female">Female<br>
+          birthday:
+          <input type="date" name="bday" ><br>
+          submit:
+          <input type="submit" value="submit">
+        </form>
+      </div>
+      <script src="index.js" type="text/javascript"> </script>
+
     </body>
   </html>
