--- a/moringa-school-projects/Akan-Birthdays/Index.html
+++ b/moringa-school-projects/Akan-Birthdays/Index.html
@@ -19,11 +19,11 @@
       </div>
     <nav>
       <ul class="project">
-        <li><a href="project.html"> Akan</a></li>
+        <li><a href="project.html"><button type="button">Project</button></a></li>
       </ul>
     </nav>
 
-      
+
     </div>
   </body>
 </html>
