--- a/moringa-school-projects/Akan-Birthdays/project.html
+++ b/moringa-school-projects/Akan-Birthdays/project.html
@@ -9,21 +9,27 @@
       <div class="container">
          <nav>
           <ul class="project">
-            <li><a href="Index.html"> Akan</a></li>
+            <li><a href="Index.html"><button type="button">Akan</button></a></li>
           </ul>
          </nav>
 
-        <form>
-          firstname:
-          <input type="text" name="firstname" placeholder="write your First Name"><br>
-          secondname:
-          <input type="text" name="SecondName" placeholder="Write your second name"><br>
+        <form id="form">
+          firstname   :<br>
+          <input type="text" id="name1" name="firstname" placeholder="write your First Name"><br>
+          secondname  :<br>
+          <input type="text" id="name2" name="SecondName" placeholder="Write your second name"><br>
           gender:<br>
-          <input type="radio" name="gender" value="male">Male<br>
-          <input type="radio" name="gender" value="female">Female<br>
-          birthday:
-          <input type="date" name="bday" ><br>
-          submit:
+          <input type="radio" id="male" name="gender" value="male">Male<br>
+          <input type="radio" id="female" gender" value="female">Female<br>
+          birthday     :<br>
+          <input type="number" name="date" id="date" ><br>
+          birthmonth   :<br>
+          <input type="number" name="month" id= "month" ><br>
+          birthyear    :<br>
+          <input type="number" name="year" id="year" ><br>
+          birthcentury :<br>
+          <input type="number" name="century" id="century" ><br>
+          submit       :<br>
           <input type="submit" value="submit">
         </form>
       </div>
