--- a/moringa-school-projects/Akan-Birthdays/Index.html
+++ b/moringa-school-projects/Akan-Birthdays/Index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link href="bootstrap-4.3.1-dist/css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
-        <link href="css/index.css" rel="stylesheet" type="text/css">
+        <link href="index.css" rel="stylesheet" type="text/css">
     <style media="screen">
     body{
         background-image: url(images/cake.jpg);
@@ -18,6 +18,7 @@
           <h1>WELCOME TO AKAN BIRTHDAYS</h1>
       </div>
     <nav>
+
       <ul class="project">
         <li><a href="project.html"><button type="button">Project</button></a></li>
       </ul>
