--- a/moringa-school-projects/Akan-Birthdays/project.html
+++ b/moringa-school-projects/Akan-Birthdays/project.html
@@ -5,13 +5,21 @@
     </head>
     <body>
       <link href="bootstrap-4.3.1-dist/css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
+      <link href="index.css" rel="stylesheet" type="text/css">
+      <div class="jumbotron">
+              <h1>Project Workability</h1>
+      </div>
 
       <div class="container">
+
          <nav>
           <ul class="project">
             <li><a href="Index.html"><button type="button">Akan</button></a></li>
           </ul>
          </nav>
+         <div class="card">
+         <div class="row">
+         <div com-md-6>
 
         <form id="form">
           firstname   :<br>
@@ -20,7 +28,7 @@
           <input type="text" id="name2" name="SecondName" placeholder="Write your second name"><br>
           gender:<br>
           <input type="radio" id="male" name="gender" value="male">Male<br>
-          <input type="radio" id="female" gender" value="female">Female<br>
+          <input type="radio" id="female" name="gender" value="female">Female<br>
           birthday     :<br>
           <input type="number" name="date" id="date" ><br>
           birthmonth   :<br>
@@ -30,10 +38,65 @@
           birthcentury :<br>
           <input type="number" name="century" id="century" ><br>
           submit       :<br>
-          <input type="submit" value="submit">
+          <button type="submit" value="submit">submit</button>
+          <script src="index.js" type="text/javascript"> </script>
+
         </form>
+        </div>
+        <div class="col-md-6">
+          <p>This is a website that helps users to know their Akan names.
+            This is based on the user being able to input their birthdays and
+            their gender.The gender helps the website determine the Akan name
+            for the user.
+          </p>
+          <div class="row">
+            <div class="col-md-6">
+              <h2>Male Names</h2>
+              <ol>
+                <li>Sunday: Kwasi</li>
+
+                <li>Monday: Kwadwo</li>
+
+                <li>Tuesday: Kwabena</li>
+
+                <li>Wednesday: Kwaku</li>
+
+                <li>Thursday:  Yaw</li>
+
+                <li>Friday: Kofi</li>
+
+                <li>Saturday: Kwame</li>
+              </ol>
+            </div>
+            <div class="col-md-6">
+              <h2>Female Names</h2>
+              <ol>
+                 <li>Sunday: Akosua</li>
+
+                  <li>Monday: Adwoa</li>
+
+                  <li>Tuesday: Abenaa</li>
+
+                  <li>Wednesday: Akua</li>
+
+                  <li>Thursday:  Yaa</li>
+
+                  <li>Friday: Afua</li>
+
+                  <li>Saturday: Ama</li>
+
+               </ol>
+
+            </div>
+
+          </div>
+        </div>
+        </div>
+
       </div>
-      <script src="index.js" type="text/javascript"> </script>
+      </div>
+
+
 
     </body>
   </html>
