--- a/moringa-school-projects/Akan-Birthdays/Index.html
+++ b/moringa-school-projects/Akan-Birthdays/Index.html
@@ -15,7 +15,9 @@
   <body>
     <div class="container">
       <div class="jumbotron">
+        <div class="bg-secondary">
           <h1>WELCOME TO AKAN BIRTHDAYS</h1>
+        </div>
       </div>
     <nav>
 
